stop hiding nav on small screens

--- a/_sass/components/_hero.scss
+++ b/_sass/components/_hero.scss
@@ -20,7 +20,6 @@
   }
 
   @media screen and (max-width: 480px) {
-    nav { display: none; }
     .arrow-down {
       bottom: 20%;
     }
